--- a/carros/src/main/resources/application.properties
+++ b/carros/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+# MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/carros?useSSL=false&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=guto123
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.ddl-auto=none
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+# Datasource
+spring.datasource.url=jdbc:h2:file:C:/Users/augus/git/carros/carros/dbCarros.mv.db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+#SQL.
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.initialization-mode=always
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
+
 
