--- a/carros/src/main/resources/application.properties
+++ b/carros/src/main/resources/application.properties
@@ -28,4 +28,7 @@ spring.datasource.initialization-mode=always
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 
+#security
+#spring.security.user.name=guto
+#spring.security.user.password=guto
 
