--- a/carros/src/main/resources/application.properties
+++ b/carros/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 # Datasource
-spring.datasource.url=jdbc:h2:file:C:/Users/augus/git/carros/carros/dbCarros.mv.db
+spring.datasource.url=jdbc:h2:file:C:/Users/guto_/git/carros/carros/dbCarros
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
