--- a/carros/src/main/resources/application.properties
+++ b/carros/src/main/resources/application.properties
@@ -8,14 +8,26 @@
 #spring.jpa.hibernate.ddl-auto=none
 
 # H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 
 # Datasource
-spring.datasource.url=jdbc:h2:file:C:/Users/guto_/git/carros/carros/dbCarros
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+
+#H2
+#spring.datasource.url=jdbc:h2:file:C:/Users/guto_/git/carros/carros/dbCarros
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+
+#MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/carros?useTimezone=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=123456
+
+#ClearDB
+spring.datasource.url=jdbc:mysql://b42fa2ac536f5d:62518d31@us-cdbr-east-02.cleardb.com/heroku_a9199d7866f3cd4?reconnect=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
 #SQL.
